# lighthouse

./: HOWTO  Makefile  build.mk  menu.lst
ghc-6.8.2/halvm-patches/: compiler.prelude.primops.txt.pp  config.sub  configure.ac  driver.mangler.ghc-asm.lprl  gmp.Makefile  includes.Bytecodes.h  includes.RtsFlags.h  includes.StgMiscClosures.h  includes.Storage.h  includes.mkDerivedConstants.c  libraries.Makefile  libraries.array.Data.Array.IO.hs  libraries.array.array.cabal  libraries.base.Control.Concurrent.hs  libraries.base.Control.Exception.hs  libraries.base.GHC.Conc.lhs  libraries.base.GHC.TopHandler.lhs  libraries.base.Prelude.hs  libraries.base.System.IO.hs  libraries.base.base.cabal  libraries.base.cbits.dirUtils.c  libraries.base.cbits.inputReady.c  libraries.base.cbits.selectUtils.c  libraries.base.include.HsBase.h  libraries.boot-packages  libraries.bytestring.Data.ByteString.Char8.hs  libraries.bytestring.Data.ByteString.Lazy.Char8.hs  libraries.bytestring.Data.ByteString.Lazy.hs  libraries.bytestring.Data.ByteString.hs  libraries.bytestring.bytestring.cabal  libraries.extra-packages  libraries.fgl.Data.Graph.Inductive.hs  libraries.fgl.fgl.cabal  libraries.haskell98.haskell98.cabal  libraries.packedstring.Data.PackedString.hs  libraries.packedstring.packedstring.cabal  libraries.parsec.Text.ParserCombinators.Parsec.Prim.hs  libraries.parsec.parsec.cabal  libraries.template-haskell.Language.Haskell.TH.Syntax.hs  libraries.template-haskell.template-haskell.cabal  (+29 more)
ghc-6.8.2/libraries/ObjectIO/: ObjectIO.cabal  prologue.txt
ghc-6.8.2/libraries/ObjectIO/Examples/: About these examples.txt
ghc-6.8.2/libraries/ObjectIO/Examples/Bounce/: BounceDraw.hs  BounceTypes.hs  Main.hs  make.bat  makefile
ghc-6.8.2/libraries/ObjectIO/Examples/ClassBrowser/: GraphViz.hs  Main.hs  make.bat  makefile
ghc-6.8.2/libraries/ObjectIO/Examples/ClipboardViewer/: Main.hs  make.bat  makefile
ghc-6.8.2/libraries/ObjectIO/Examples/Compare/: Main.hs  make.bat  makefile
ghc-6.8.2/libraries/ObjectIO/Examples/Counter/: Main.hs  make.bat  makefile
ghc-6.8.2/libraries/ObjectIO/Examples/Hanoi/: Main.hs  make.bat  makefile
ghc-6.8.2/libraries/ObjectIO/Examples/Hello/: Main.hs  make.bat  makefile
ghc-6.8.2/libraries/ObjectIO/Examples/Life/: Life.hs  LifeHelp  Main.hs  make.bat  makefile
ghc-6.8.2/libraries/ObjectIO/Examples/RGBSelector/: Main.hs  make.bat  makefile
ghc-6.8.2/libraries/ObjectIO/Examples/SlideGame/: Main.hs  make.bat  makefile
ghc-6.8.2/libraries/ObjectIO/Examples/Talk/: Main.hs  make.bat  makefile
ghc-6.8.2/libraries/ObjectIO/Examples/Typist/: Main.hs  Monitor.hs  make.bat  makefile
ghc-6.8.2/libraries/ObjectIO/Examples/Utilities/: Help.hs  HighScore.hs  Notice.hs
ghc-6.8.2/libraries/ObjectIO/Examples/Worm/: Main.hs  WormHelp  WormShow.hs  WormState.hs  make.bat  makefile
ghc-6.8.2/libraries/ObjectIO/Graphics/UI/: ObjectIO.hs
ghc-6.8.2/libraries/ObjectIO/cbits/Linux/: cCCallSystem_121.c  cCCallWindows_121.c  cCrossCallClipboard_121.c  cCrossCallFileSelectors_121.c  cCrossCallFont_121.c  cCrossCallMenus_121.c  cCrossCallPrinter_121.c  cCrossCallProcedureTable_121.c  cCrossCallTCP_121.c  cCrossCallWindows_121.c  cCrossCall_121.c  cCrossCallxDI_121.c  cpicture_121.c  cprinter_121.c  util_121.c
ghc-6.8.2/libraries/ObjectIO/cbits/Windows/: cAcceleratorTable_121.c  cAcceleratorTable_121.h  cCCallSystem_121.c  cCCallWindows_121.c  cCrossCallClipboard_121.c  cCrossCallFileSelectors_121.c  cCrossCallFont_121.c  cCrossCallMenus_121.c  cCrossCallPrinter_121.c  cCrossCallTCP_121.c  (+7 more)
ghc-6.8.2/libraries/ObjectIO/doc/: Makefile  object-io.xml
ghc-6.8.2/libraries/ObjectIO/include/: cCCallSystem_121.h  cCCallWindows_121.h  cCrossCallClipboard_121.h  cCrossCallFileSelectors_121.h  cCrossCallFont_121.h  cCrossCallMenus_121.h  cCrossCallPrinter_121.h  cCrossCallProcedureTable_121.h  cCrossCallWindows_121.h  cCrossCall_121.h  cCrossCallxDI_121.h  cTCP_121.h  cpicture_121.h  cprinter_121.h  intrface_121.h  util_121.h
ghc-6.8.2/libraries/QuickCheck/: QuickCheck.cabal
ghc-6.8.2/libraries/QuickCheck/Test/: QuickCheck.hs
ghc-6.8.2/libraries/array/: Makefile.nhc98  array.cabal
ghc-6.8.2/libraries/array/Data/: Array.hs
ghc-6.8.2/libraries/cgi/: INSTALL  README  cgi.cabal  mk-cgi-compat.sh  prologue.txt
ghc-6.8.2/libraries/cgi/Network/: CGI.hs
ghc-6.8.2/libraries/cgi/examples/: Makefile  cookie.hs  error.hs  hello.hs  printinput.hs  redirect.hs  showAllInputs.hs  upload.hs
ghc-6.8.2/libraries/haskell-src/: haskell-src.cabal
ghc-6.8.2/libraries/hpc/: hpc.cabal
ghc-6.8.2/libraries/hpc/tests/: Makefile  hpcrun.pl
ghc-6.8.2/libraries/html/: LICENSE  html.cabal
ghc-6.8.2/libraries/html/Text/: Html.hs
ghc-6.8.2/libraries/old-locale/: old-locale.cabal  prologue.txt
ghc-6.8.2/libraries/old-locale/System/: Locale.hs
ghc-6.8.2/libraries/old-time/: .darcs-boring  configure  old-time.cabal  prologue.txt
ghc-6.8.2/libraries/old-time/System/: Time.hsc
ghc-6.8.2/libraries/old-time/cbits/: timeUtils.c
ghc-6.8.2/libraries/old-time/include/: HsTimeConfig.h.in
ghc-6.8.2/libraries/packedstring/: packedstring.cabal  prologue.txt
ghc-6.8.2/libraries/packedstring/Data/: PackedString.hs
ghc-6.8.2/libraries/readline/: .darcs-boring  HsReadline_cbits.c  Makefile.nhc98  aclocal.m4  configure  configure.ac  prologue.txt  readline.buildinfo.in  readline.cabal
ghc-6.8.2/libraries/readline/include/: HsReadline.h  HsReadlineConfig.h.in
ghc-6.8.2/libraries/regex-base/: Setup.lhs  prologue.txt  regex-base.cabal
ghc-6.8.2/libraries/regex-base/doc/: README  Redesign.txt  lazy.html
ghc-6.8.2/libraries/regex-base/examples/: Example3.lhs
ghc-6.8.2/libraries/regex-compat/: prologue.txt  regex-compat.cabal
ghc-6.8.2/libraries/regex-compat/Text/: Regex.hs
ghc-6.8.2/libraries/regex-posix/: Setup.lhs  config.mk  config.mk.in  configure  configure.ac  prologue.txt  regex-posix.buildinfo  regex-posix.buildinfo.in  regex-posix.cabal
ghc-6.8.2/libraries/regex-posix/cbits/: Makefile
ghc-6.8.2/libraries/regex-posix/include/: HsRegexPosixConfig.h  HsRegexPosixConfig.h.in
(+486 files in other folders)
