*** ghc-pristine/libraries/array/array.cabal	2007-11-01 19:58:24.000000000 -0700
--- ghc-xen/libraries/array/array.cabal	2007-11-14 18:00:40.000000000 -0800
***************
*** 24,28 ****
      Data.Array.IO.Internals
  extensions: CPP
  include-dirs: include
! ghc-options: -fglasgow-exts
  
--- 24,28 ----
      Data.Array.IO.Internals
  extensions: CPP
  include-dirs: include
! ghc-options: -fglasgow-exts -Dxen_HOST_OS
  
