*** ghc-pristine/libraries/base/base.cabal	2007-12-10 10:16:54.000000000 -0800
--- ghc-xen/libraries/base/base.cabal	2008-01-02 14:20:25.000000000 -0800
***************
*** 34,40 ****
              GHC.Base,
              GHC.Conc,
              GHC.ConsoleHandler,
-             GHC.Dotnet,
              GHC.Enum,
              GHC.Environment,
              GHC.Err,
--- 34,39 ----
***************
*** 42,49 ****
              GHC.Exts,
              GHC.Float,
              GHC.ForeignPtr,
-             GHC.Handle,
-             GHC.IO,
              GHC.IOBase,
              GHC.Int,
              GHC.List,
--- 41,46 ----
***************
*** 140,150 ****
          System.Mem,
          System.Mem.StableName,
          System.Mem.Weak,
-         System.Posix.Internals,
          System.Posix.Types,
          Text.ParserCombinators.ReadP,
          Text.ParserCombinators.ReadPrec,
-         Text.Printf,
          Text.Read,
          Text.Read.Lex,
          Text.Show,
--- 137,145 ----
***************
*** 169,174 ****
      -- XXX is there an extension for using # in varids?
      -- We need to set the package name to base (without a version number)
      -- as it's magic.
!     ghc-options: -fglasgow-exts -package-name base
      nhc98-options: -H4M -K3M
  }
--- 164,169 ----
      -- XXX is there an extension for using # in varids?
      -- We need to set the package name to base (without a version number)
      -- as it's magic.
!     ghc-options: -fglasgow-exts -package-name base -Dxen_HOST_OS
      nhc98-options: -H4M -K3M
  }
