*** ghc-pristine/libraries/bytestring/bytestring.cabal	2007-11-01 19:58:53.000000000 -0700
--- ghc-xen/libraries/bytestring/bytestring.cabal	2007-11-14 18:06:50.000000000 -0800
***************
*** 30,36 ****
                       Data.ByteString.Lazy.Char8
                       Data.ByteString.Lazy.Internal
                       Data.ByteString.Fusion
!   ghc-options:       -Wall -fglasgow-exts -O2
    if impl(ghc <= 6.4.2)
      ghc-options:     -DSLOW_FOREIGN_PTR
    nhc98-options:     -K4M -K3M
--- 30,36 ----
                       Data.ByteString.Lazy.Char8
                       Data.ByteString.Lazy.Internal
                       Data.ByteString.Fusion
!   ghc-options:       -Wall -fglasgow-exts -O2 -Dxen_HOST_OS
    if impl(ghc <= 6.4.2)
      ghc-options:     -DSLOW_FOREIGN_PTR
    nhc98-options:     -K4M -K3M
