*** ghc-pristine/libraries/template-haskell/template-haskell.cabal	2007-11-01 20:00:08.000000000 -0700
--- ghc-xen/libraries/template-haskell/template-haskell.cabal	2007-11-14 18:32:29.000000000 -0800
***************
*** 15,19 ****
      Language.Haskell.TH
  -- We need to set the package name to template-haskell (without a
  -- version number) as it's magic.
! ghc-options: -package-name template-haskell
  
--- 15,20 ----
      Language.Haskell.TH
  -- We need to set the package name to template-haskell (without a
  -- version number) as it's magic.
! ghc-options: -package-name template-haskell -Dxen_HOST_OS
! extensions: CPP
  
