name:       ObjectIO
version:    1.0.1.1
license:    BSD3
maintainer: ka2_mail@yahoo.com
exposed-modules:
    Graphics.UI.ObjectIO.Control.Access,
    Graphics.UI.ObjectIO.Control.Create,
    Graphics.UI.ObjectIO.Control.Draw,
    Graphics.UI.ObjectIO.Control.Internal,
    Graphics.UI.ObjectIO.Control.Layout,
    Graphics.UI.ObjectIO.Control.Pos,
    Graphics.UI.ObjectIO.Control.Relayout,
    Graphics.UI.ObjectIO.Control.Resize,
    Graphics.UI.ObjectIO.Control.Validate,
    Graphics.UI.ObjectIO.CommonDef,
    Graphics.UI.ObjectIO.Id,
    Graphics.UI.ObjectIO.Key,
    Graphics.UI.ObjectIO.KeyFocus,
    Graphics.UI.ObjectIO.Layout,
    Graphics.UI.ObjectIO.Relayout,
    Graphics.UI.ObjectIO.StdBitmap,
    Graphics.UI.ObjectIO.StdClipboard,
    Graphics.UI.ObjectIO.StdControl,
    Graphics.UI.ObjectIO.StdControlAttribute,
    Graphics.UI.ObjectIO.StdControlClass,
    Graphics.UI.ObjectIO.StdControlDef,
    Graphics.UI.ObjectIO.StdControlReceiver,
    Graphics.UI.ObjectIO.StdFileSelect,
    Graphics.UI.ObjectIO.StdGUI,
    Graphics.UI.ObjectIO.StdIOBasic,
    Graphics.UI.ObjectIO.StdIOCommon,
    Graphics.UI.ObjectIO.StdId,
    Graphics.UI.ObjectIO.StdKey,
    Graphics.UI.ObjectIO.StdMenu,
    Graphics.UI.ObjectIO.StdMenuAttribute,
    Graphics.UI.ObjectIO.StdMenuDef,
    Graphics.UI.ObjectIO.StdMenuElement,
    Graphics.UI.ObjectIO.StdMenuElementClass,
    Graphics.UI.ObjectIO.StdMenuReceiver,
    Graphics.UI.ObjectIO.StdPicture,
    Graphics.UI.ObjectIO.StdPictureDef,
    Graphics.UI.ObjectIO.StdProcess,
    Graphics.UI.ObjectIO.StdProcessAttribute,
    Graphics.UI.ObjectIO.StdProcessDef,
    Graphics.UI.ObjectIO.StdReceiver,
    Graphics.UI.ObjectIO.StdReceiverAttribute,
    Graphics.UI.ObjectIO.StdReceiverDef,
    Graphics.UI.ObjectIO.StdSound,
    Graphics.UI.ObjectIO.StdSystem,
    Graphics.UI.ObjectIO.StdTimer,
    Graphics.UI.ObjectIO.StdTimerAttribute,
    Graphics.UI.ObjectIO.StdTimerDef,
    Graphics.UI.ObjectIO.StdTimerElementClass,
    Graphics.UI.ObjectIO.StdTimerReceiver,
    Graphics.UI.ObjectIO.StdWindow,
    Graphics.UI.ObjectIO.StdWindowAttribute,
    Graphics.UI.ObjectIO.StdWindowDef,
    Graphics.UI.ObjectIO.SystemId,
    Graphics.UI.ObjectIO.Device.Events,
    Graphics.UI.ObjectIO.Device.SystemState,
    Graphics.UI.ObjectIO.Device.Types,
    Graphics.UI.ObjectIO.Menu.Access,
    Graphics.UI.ObjectIO.Menu.Create,
    Graphics.UI.ObjectIO.Menu.DefAccess,
    Graphics.UI.ObjectIO.Menu.Device,
    Graphics.UI.ObjectIO.Menu.Handle,
    Graphics.UI.ObjectIO.Menu.Internal,
    Graphics.UI.ObjectIO.Menu.Items,
    Graphics.UI.ObjectIO.OS.Bitmap,
    Graphics.UI.ObjectIO.OS.ClCCall_12,
    Graphics.UI.ObjectIO.OS.ClCrossCall_12,
    Graphics.UI.ObjectIO.OS.Clipboard,
    Graphics.UI.ObjectIO.OS.Cutil_12,
    Graphics.UI.ObjectIO.OS.DocumentInterface,
    Graphics.UI.ObjectIO.OS.Event,
    Graphics.UI.ObjectIO.OS.FileSelect,
    Graphics.UI.ObjectIO.OS.Font,
    Graphics.UI.ObjectIO.OS.Menu,
    Graphics.UI.ObjectIO.OS.MenuEvent,
    Graphics.UI.ObjectIO.OS.Picture,
    Graphics.UI.ObjectIO.OS.ProcessEvent,
    Graphics.UI.ObjectIO.OS.ReceiverEvent,
    Graphics.UI.ObjectIO.OS.Rgn,
    Graphics.UI.ObjectIO.OS.System,
    Graphics.UI.ObjectIO.OS.Time,
    Graphics.UI.ObjectIO.OS.TimerEvent,
    Graphics.UI.ObjectIO.OS.ToolBar,
    Graphics.UI.ObjectIO.OS.ToolTip,
    Graphics.UI.ObjectIO.OS.Types,
    Graphics.UI.ObjectIO.OS.Window,
    Graphics.UI.ObjectIO.OS.WindowCCall_12,
    Graphics.UI.ObjectIO.OS.WindowCrossCall_12,
    Graphics.UI.ObjectIO.OS.WindowEvent,
    Graphics.UI.ObjectIO.Process.Device,
    Graphics.UI.ObjectIO.Process.IOState,
    Graphics.UI.ObjectIO.Process.Scheduler,
    Graphics.UI.ObjectIO.Process.Toolbar,
    Graphics.UI.ObjectIO.Receiver.Access,
    Graphics.UI.ObjectIO.Receiver.DefAccess,
    Graphics.UI.ObjectIO.Receiver.Device,
    Graphics.UI.ObjectIO.Receiver.Handle,
    Graphics.UI.ObjectIO.Timer.Access,
    Graphics.UI.ObjectIO.Timer.DefAccess,
    Graphics.UI.ObjectIO.Timer.Device,
    Graphics.UI.ObjectIO.Timer.Handle,
    Graphics.UI.ObjectIO.Timer.Table,
    Graphics.UI.ObjectIO.Window.Access,
    Graphics.UI.ObjectIO.Window.ClipState,
    Graphics.UI.ObjectIO.Window.Controls,
    Graphics.UI.ObjectIO.Window.Create,
    Graphics.UI.ObjectIO.Window.Device,
    Graphics.UI.ObjectIO.Window.Dispose,
    Graphics.UI.ObjectIO.Window.Draw,
    Graphics.UI.ObjectIO.Window.Handle,
    Graphics.UI.ObjectIO.Window.SDISize,
    Graphics.UI.ObjectIO.Window.Update,
    Graphics.UI.ObjectIO.Window.Validate,
    Graphics.UI.ObjectIO
extra-libraries:    "user32",
                    "gdi32",
                    "kernel32",
                    "comctl32",
                    "comdlg32",
                    "shell32",
                    "winmm",
                    "winspool",
                    "ole32"
depends: base

