name:		old-locale
version:	1.0.0.0
license:	BSD3
license-file:	LICENSE
maintainer:	libraries@haskell.org
synopsis:	locale library
description:
    This package provides the old locale library.
    For new code, the new locale library is recommended.
build-type: Simple
exposed-modules:
	System.Locale
build-depends: base

