name:		readline
version:	1.0.1.0
license:	GPL
license-file:	LICENSE
maintainer:	libraries@haskell.org
synopsis:	An interface to the GNU readline library
description:
		More information on readline can be found at
		<http://www.gnu.org/directory/readline.html>.
extra-source-files:
		aclocal.m4 configure.ac configure
		readline.buildinfo.in include/HsReadlineConfig.h.in
		include/HsReadline.h
extra-tmp-files:
		config.log config.status autom4te.cache
		readline.buildinfo include/HsReadlineConfig.h
build-type: Configure
cabal-version: >=1.2

flag split-base

library
  exposed-modules:
                System.Console.Readline
                System.Console.SimpleLineEditor
  if flag(split-base)
    build-depends:	base >= 3, process
  else
    build-depends:	base < 3
  extensions:	CPP
  include-dirs: 	include
  includes:	HsReadline.h
  install-includes:	HsReadline.h HsReadlineConfig.h
  c-sources:	HsReadline_cbits.c
