-- ****************************************************************
-- To fix for cabal < 1.1.4 comment out the Extra-Source-Files line
-- ****************************************************************
Name:                   regex-base
Version:                0.72.0.1
-- Cabal-Version:       >=1.1.4
License:                BSD3
License-File:           LICENSE
Copyright:              Copyright (c) 2006, Christopher Kuklewicz
Author:                 Christopher Kuklewicz
Maintainer:             TextRegexLazy@personal.mightyreason.com
Stability:              Seems to work, passes a few tests
Homepage:               http://sourceforge.net/projects/lazy-regex
-- Package-URL:
Synopsis:               Replaces/Enhances Text.Regex
Description:            Interface API for regex-posix,pcre,parsec,dfa
Category:               Text
Tested-With:            GHC
Build-Type:             Simple
Cabal-Version:          >=1.2

Flag split-base
Flag bytestring-in-base

Library
  if flag(split-base)
    Build-Depends:      base >= 3, array
  else
    Build-Depends:      base < 3
  if flag(bytestring-in-base)
    Build-Depends:      base >= 2 && < 3
  else
    Build-Depends:      base < 2 || >= 3, bytestring
-- Data-Files:
-- Extra-Source-Files:     Text/Regex/Lazy/TestCompat.hs, Text/Regex/Lazy/TestFull.hs, Text/Regex/Impl/TestContext.hs, TestTextRegexLazy.hs, Example.hs, Example2.hs, lazy.html, README, Makefile
-- Extra-Tmp-Files:
  Exposed-Modules:      Text.Regex.Base
                        Text.Regex.Base.RegexLike
                        Text.Regex.Base.Context
                        Text.Regex.Base.Impl
  Buildable:              True
-- Other-Modules:
-- ********* Be backward compatible until 6.4.2 is futher deployed
-- HS-Source-Dirs:         "."
  Extensions:             MultiParamTypeClasses, FunctionalDependencies, CPP
-- GHC-Options:            -Wall -Werror
-- GHC-Options:            -Wall -Werror -O2
  GHC-Options:            -Wall -O2
-- GHC-Options:            -Wall -ddump-minimal-imports
-- GHC-Prog-Options: 
-- Hugs-Options:
-- NHC-Options:
-- Includes:
-- Include-Dirs:
-- C-Sources:
-- Extra-Libraries:
-- Extra-Lib-Dirs:
-- CC-Options:
-- LD-Options:
-- Frameworks:
